--- a/singlish-to-unicode.html
+++ b/singlish-to-unicode.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Time Unicode Converter</title>
+    <title>Real Time Singlish Converter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css/style.css">
@@ -23,10 +23,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Unicode-to-DLManel</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Unicode-to-DLManel</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="singlish-to-unicode.html">Singlish-to-Unicode</a>
+                        <a class="nav-link active" href="singlish-to-unicode.html">Singlish-to-Unicode</a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.buymeacoffee.com/lakinduk" target="_blank"><img
@@ -40,8 +40,8 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-8 text-center position-relative">
-                <h2 class="mb-5">Realtime Unicode Converter</h2>
-                <h4>Unicode (<span style="font-family: Potha;">යුනිකෝඩ්</span>)</h4>
+                <h2 class="mb-5">Realtime Singlish Converter</h2>
+                <h4>Singlish to Unicode (<span style="font-family: Potha;">යුනිකෝඩ්</span>)</h4>
                 <form name="txtBox">
                     <div class="position-relative mb-3">
                         <textarea class="form-control text-center" style="font-size: 14pt; font-family: Potha;"
@@ -52,7 +52,7 @@
                     <div class="mb-3">
                         <input type="reset" class="btn btn-outline-secondary" value="Reset">
                     </div>
-                    <h4>DL-Manel-bold. (<span style="font-family: DL-Manel-bold;">ã t,a udfk,a fnda,aâ</span>)</h4>
+                    <h4>Unicode</h4>
                     <div class="position-relative mb-3">
                         <textarea class="form-control text-center" style="font-size: 14pt; font-family: DL-Manel-bold;"
                             name="box2" rows="7"></textarea>
@@ -120,7 +120,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="public/js/unicode-to-dlmanel.js"></script>
+    <script src="public/js/singlish-to-unicode.js"></script>
     <script src="public/js/copy.js"></script>
 </body>
 
