--- a/singlish-to-unicode.html
+++ b/singlish-to-unicode.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/assets/favicon-16x16.png">
+    <link rel="manifest" href="public/assets/site.webmanifest">
     <title>Real Time Singlish Converter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -30,8 +34,8 @@
                     </li>
                     <li class="nav-item">
                         <a href="https://www.buymeacoffee.com/lakinduk" target="_blank"><img
-                            src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee"
-                            style="height: 40px !important;width: 160px !important;"></a>
+                                src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee"
+                                style="height: 40px !important;width: 160px !important;"></a>
                     </li>
                 </ul>
             </div>
